--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "uniqid": "^5.2.0",
     "web-vitals": "^1.1.0"
   },
-  "homepage": "https://mikewhite628.github.io/shopping-cart",
+  "homepage": "https://mikewhite628.github.io/shopping-cart/#/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d -build"
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
