--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "uniqid": "^5.2.0",
     "web-vitals": "^1.1.0"
   },
-  "homepage": "https://mikewhite628.github.io/shopping-cart/#/",
+  "homepage": "https://mikewhite628.github.io/shopping-cart/home",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
